syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.paymentservice.grpc";
option java_outer_classname = "PaymentServiceProto";

service PaymentGrpcService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  int64 user_id = 1;
  int64 item_id = 2;
  double amount = 3;
  string card_number = 4;
  string card_holder_name = 5;
  string expiration_date = 6;  // <- must exist
  string cvv = 7;
}

message PaymentResponse {
  string status = 1;     // e.g., "COMPLETED"
  string message = 2;    // e.g., "Payment successful"
  int64 paymentId = 3;   // From DB
}